--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,16 @@
 name = "trade-worker"
 main = "src/index.js"
-compatibility_date = "2023-12-01"
+compatibility_date = "2024-03-26"
 compatibility_flags = ["nodejs_compat"]
+
+[observability]
+enabled = true
 
 # Secrets to be added with wrangler:
 # wrangler secret put INTERNAL_SERVICE_KEY
 # wrangler secret put MEXC_API_KEY
 # wrangler secret put MEXC_API_SECRET
+# wrangler secret put BINANCE_API_KEY
+# wrangler secret put BINANCE_API_SECRET
+# wrangler secret put BYBIT_API_KEY
+# wrangler secret put BYBIT_API_SECRET
