--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,6 +6,9 @@ compatibility_flags = ["nodejs_compat"]
 [observability]
 enabled = true
 
+[vars]
+D1_WORKER_URL = "https://d1-worker.cryptolinx.workers.dev"
+
 # Secrets to be added with wrangler:
 # wrangler secret put INTERNAL_SERVICE_KEY
 # wrangler secret put MEXC_API_KEY
