--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,5 @@
 name = "trade-worker"
+account_id = "debc6545e63bea36be059cbc82d80ec8"
 main = "src/index.js"
 compatibility_date = "2024-03-26"
 compatibility_flags = ["nodejs_compat"]
